# matw

./: Cargo.toml  README.md
crates/matw-agent/: Cargo.toml
crates/matw-agent/src/: agent.rs  lib.rs  streaming.rs
crates/matw-ai/: Cargo.toml
crates/matw-ai/src/: config.rs  error.rs  lib.rs  provider.rs
crates/matw-ai/src/providers/: claude.rs  glm.rs  kimi.rs  mod.rs
crates/matw-cli/: Cargo.toml
crates/matw-cli/src/: config.rs  lib.rs  logo.rs  main.rs  session.rs
crates/matw-core/: Cargo.toml
crates/matw-core/src/: content.rs  context.rs  error.rs  lib.rs  message.rs  role.rs  session.rs
crates/matw-core/tests/: integration_test.rs
crates/matw-mcp/: Cargo.toml
crates/matw-mcp/src/: bridge.rs  lib.rs  protocol.rs  server.rs
crates/matw-tools/: Cargo.toml
crates/matw-tools/src/: lib.rs  tool.rs
crates/matw-tools/src/tools/: bash.rs  glob.rs  mod.rs  read.rs  write.rs
crates/matw-tools/tests/: integration_test.rs
crates/matw-tui/: Cargo.toml
crates/matw-tui/src/: app.rs  event.rs  lib.rs  main.rs  runner.rs  ui.rs
docs/plans/: 2026-02-02-matw-design.md  2026-02-02-matw-implementation-plan.md  2026-02-02-phase4-6-plan.md
