[workspace]
members = [
    "crates/matw-core",
    "crates/matw-ai",
    "crates/matw-tools",
    "crates/matw-cli",
    "crates/matw-tui",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID and time
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Testing
tempfile = "3.13"
