[package]
name = "matw-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
matw-core = { path = "../matw-core" }
matw-ai = { path = "../matw-ai" }
matw-tools = { path = "../matw-tools" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
futures = { workspace = true }
