[package]
name = "matw-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "matw"
path = "src/main.rs"

[dependencies]
matw-core = { path = "../matw-core" }
matw-ai = { path = "../matw-ai" }
matw-tools = { path = "../matw-tools" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
