[package]
name = "matw-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
matw-core = { path = "../matw-core" }
matw-tools = { path = "../matw-tools" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# JSON-RPC
async-trait = "0.1"
jsonrpsee = { version = "0.24", features = ["server", "client"] }

[dev-dependencies]
tempfile = { workspace = true }
